--- a/src/app/components/i18n/agenda/en.json
+++ b/src/app/components/i18n/agenda/en.json
@@ -5,7 +5,7 @@
     "buttons": {
       "addEvent": "Add event",
       "updateEvent": "Update event",
-      "dropdownEffective": "Change workforce"
+      "dropdownEffective": "Change squad"
     },
     "eventType": {
       "cup": "Cup",
