--- a/src/app/components/i18n/public/en.json
+++ b/src/app/components/i18n/public/en.json
@@ -73,7 +73,7 @@
           },
           "shareWeb": {
             "title": "Collaborate and progress",
-            "intro": "Share your workforce with other coaches",
+            "intro": "Share your squad with other coaches",
             "item1Title": "Work with other handball coaches",
             "item1Detail": "Collaborate on the same squad, the same players, the same statistics and identify areas for team improvement",
             "item2Title": "Work on several people with other coaches",
