--- a/src/app/components/i18n/stats/en.json
+++ b/src/app/components/i18n/stats/en.json
@@ -1,10 +1,10 @@
 {
   "stats": {
     "buttons": {
-      "timeline": "Détail"
+      "timeline": "Detail"
     },
     "positionType": {
-      "libelle": "Poste",
+      "libelle": "Position",
       "value": {
         "midfielder": "Midfielder",
         "defender": "Defender",
@@ -21,45 +21,46 @@
     "efficiency": {
       "efficiency": "Shoot's efficiency",
       "efficiencyGoalkeeper": "Goalkeeper's efficiency",
-      "efficiencyGoalkeeperDesc": "Number stop on number shoot",
+      "efficiencyGoalkeeperDesc": "The effectiveness of the goalkeeper is determined by the ratio stops count versus shots count",
       "efficiencyTotal": "Global",
-      "efficiency9m": "9 mètres",
-      "efficiency6m": "6 mètres",
-      "efficiency7m": "7 mètres"
+      "efficiency9m": "9 meters",
+      "efficiency6m": "6 meters",
+      "efficiency7m": "7 meters"
     },
     "actionTab": {
-      "title": "Facts in game",
+      "title": "Game facts",
       "actions": "Actions",
-      "positive": "positives",
+      "positive": "positive",
       "negative": "negative",
       "attack": "Attack actions",
-      "defense": "Defense actions"
+      "defense": "Defense actions",
+      "timeline": "Timeline"
     },
     "resumeTab": {
-      "shoot": "Shoots",
+      "shoot": "Shots",
       "goal": "Goals",
       "goalScored": "Goal scored",
       "goalConceded": "Goal conceded",
-      "goalLabel": "Nb Goal",
-      "goalAvgFull": "Average/Game",
+      "goalLabel": "Goal count",
+      "goalAvgFull": "Average by game",
       "goalAvgLight": "Average",
-      "frequence": "Frequence",
+      "frequence": "Frequency",
       "frequence2": "1 goal per",
       "minute": "minutes",
-      "usePlayer": "Use player",
+      "usePlayer": "Player use",
       "gamePlayed": "Games played",
       "holder": "Holder",
       "playTime": "Average playtime",
-      "sanctions": "Advertissements",
-      "noData": "No Data collected on period"
+      "sanctions": "Sanctions",
+      "noData": "No data collected on period"
     },
     "labelTab": {
       "shoot": "Shoot",
       "actions": "Game actions",
       "resume": "Synthesis"
     },
-    "typoGoal": "Typologie des buts",
-    "adversary": "Adversary",
+    "typoGoal": "Origin and impact of the shots",
+    "adversary": "Oponent",
     "myteam": "My team",
     "sanction": {
       "yellowCard": "Yellow card",
@@ -67,82 +68,85 @@
       "redCard": "Red card"
     },
     "teamLabels": {
-      "listCollect": "list event"
+      "listCollect": "Events concerned"
     },
     "eventLabels": {
-      "listPlayers": "Player list",
+      "listPlayers": "Game sheet",
       "goalkeeper": "Goalkeeper",
+      "player": "Player",
+      "playTime": "Playtime",
+      "position": "Position",
       "holder": "Holder",
       "note": "Note",
-      "playTime": "Playtime",    
-      "player": "Player",
-      "position": "Position",
       "efficiency": "Efficiency",
       "shoot": "Goal/Shoot",
       "efficiencyGoal": "% Stop",
       "stop": "Stop/Shoot",
       "attack": "Attack (+/-)",
       "defense": "Defense (+/-)",
+      "sanction": "Sanctions",
       "yellowCard": "YC",
       "exclusion": "2'",
-      "sanction": "Sanction",
       "redCard": "RC"
     },
     "label": {
       "indicator": "Indicator",
-      "interceptionKo": "Interception ratée",
-      "duelLoose": "Duel perdu",
-      "badPosition": "Mauvais placement",
-      "neutralization": "Neutralisation",
+      "interceptionKo": "Missed interception",
+      "duelLoose": "Lost duel",
+      "badPosition": "Bad position",
+      "neutralization": "Neutralization",
       "forceDef": "Force",
-      "contre": "Contre",
-      "interceptionOk": "Interception réussie",
+      "contre": "Against",
+      "interceptionOk": "Successful interception",
       "forceAtt": "Force",
-      "marcher": "Marcher",
+      "marcher": "Walk",
       "doubleDribble": "Double dribble",
-      "looseball": "Perte de balle",
-      "foot": "Pied",
-      "zone": "Zone",
-      "counterAttack": "Contre attaque",
-      "shift": "Décallage",
-      "duelWon": "Duel gagné",
-      "passDec": "Passe décisive",
-      "yellowCard": "Carton jaune",
-      "redCard": "Carton rouge",
-      "playtime": "Temps de jeu",
-      "substitue": "Remplaçant",
-      "holder": "Titulaire",
-      "injured": "Blessé",
+      "looseball": "Ball loss",
+      "foot": "Foot",
+      "zone": "Area",
+      "counterAttack": "Counter attack",
+      "shift": "Shift",
+      "duelWon": "Duel won",
+      "passDec": "Decisive pass",
+      "yellowCard": "Yellow card",
+      "redCard": "Red card",
+      "playtime": "Playtime",
+      "substitue": "Substitute",
+      "holder": "Holder",
+      "injured": "Injured",
       "eventNotePerson": "Note",
-      "defenseSysUs": "Système de jeu",
-      "defenseSystemThem": "Système de jeu",
-      "timeAttack": "Temps en attaque",
-      "timeDefense": "Temps en défense",
-      "timeoutUs": "Temps mort",
-      "timeoutThem": "Temps mort",
-      "wound": "Blessure",
-      "passOk": "Passe",
-      "passOkStat": "Nb de passes",
-      "gameSystem": "Système de jeu",
-      "stopGKAtt": "Arrêt gardien",
-      "stopGKDef": "Arrêt gardien",
-      "positionType": "Poste",
+      "defenseSysUs": "Game system",
+      "defenseSystemThem": "Game system",
+      "timeAttack": "Attack time",
+      "timeDefense": "Defense time",
+      "timeoutUs": "Timeout",
+      "timeoutThem": "Timeout",
+      "wound": "Wound",
+      "passOk": "Pass",
+      "passOkStat": "Pass count",
+      "gameSystem": "Game system",
+      "stopGKAtt": "Goalkeeper stop",
+      "stopGKDef": "Goalkeeper stop",
+      "positionType": "Position",
       "penaltyObtained": "Penalty",
       "penaltyConceded": "Penalty",
-      "originShootAtt": "Origine de tir",
-      "originShootDef": "Origine de tir",
-      "shootAtt": "Tir",
-      "shootDef": "Tir adverse",
-      "goalScored": "But marqué",
-      "goalconceded": "But encaissé",
-      "stopOk": "Tir arreté",
-      "impactShootAtt": "Impact de tir",
-      "impactShootDef": "Impact de tir",
-      "pole": "Poteau",
-      "outside": "Sortie",
+      "originShootAtt": "Origin of shooting",
+      "originShootDef": "Origin of shooting",
+      "shootAtt": "Shoot",
+      "shootDef": "Opponent shot",
+      "goalScored": "Goal scored",
+      "goalConceded": "Goal conceded",
+      "stopOk": "Shot stopped",
+      "impactShootAtt": "Shooting impact",
+      "impactShootDef": "Shooting impact",
+      "pole": "Pole",
+      "outside": "Out",
       "exclTmpObtained": "2 minutes",
       "exclusionTempoObtained": "2 minutes",
-      "playTime": "Temps de jeu"
+      "playTime": "Playtime",
+      "firstPeriod": "First phase",
+      "secondPeriod": "Second phase",
+      "timelineShoot": "Goal time line"
     }
   }
 }
