--- a/src/app/components/i18n/user/fr.json
+++ b/src/app/components/i18n/user/fr.json
@@ -245,7 +245,7 @@
   },
   "invitationCancel": {
     "title": "Merci de votre visite",
-    "text": "Nous n'avons pas eu le temps de nous connaître. Laissez nous votre avec le bouton feedback",
+    "text": "Nous n'avons pas eu le temps de nous connaître. Laissez nous votre avis avec le bouton feedback",
     "buttonHome": "Accueil"
   },
   "signupStartDonePage": {
