--- a/src/app/components/i18n/feedback/en.json
+++ b/src/app/components/i18n/feedback/en.json
@@ -17,7 +17,7 @@
     "description": {
       "heading": "Feedback lets you send us suggestions about our products. We welcome problem reports, feature ideas and general comments.",
       "desc": "Start by writing a brief description:",
-      "highlight": ">Next we'll let you identify areas of the page related to your description."
+      "highlight": "Next we'll let you identify areas of the page related to your description."
     },
     "overview": {
       "desc": "Description",
@@ -27,7 +27,7 @@
       "page-info": "Page Info",
       "timestamp": "Time Stamp",
       "page-structure": "Page Structure",
-      "screenshot": "Screenshot"
+      "screenshot": "Screenshots"
     },
     "submit-error": {
       "heading": "Sadly an error occurred while sending your feedback. Please try again."
