--- a/src/app/components/i18n/menu/en.json
+++ b/src/app/components/i18n/menu/en.json
@@ -31,7 +31,7 @@
   },
   "navbar": {
     "welcome": "Welcome",
-    "connect": "Connection",
+    "connect": "Sign in",
     "disconnect": "Logout",
     "administration": "Administration",
     "signup": "Create an account",
