don't ask for user name and first-name in registration process

--- a/src/app/components/i18n/home/fr.json
+++ b/src/app/components/i18n/home/fr.json
@@ -2,7 +2,7 @@
   "intro": {
     "step1": {
       "title": "Bienvenue sur Qaobee !",
-      "desc": "<b>Vous bénéficiez d'un mois gratuit à compter de la date de création de votre compte</b>.<br> Prenons quelques instants pour découvrir les principales fonctionnalités de l'application."
+      "desc": "Prenons quelques instants pour découvrir les principales fonctionnalités de l'application."
     },
     "step2": {
       "title": "Restez à l'affût",
