Removing country from signup

--- a/src/app/components/i18n/agenda/en.json
+++ b/src/app/components/i18n/agenda/en.json
@@ -43,7 +43,13 @@
     "SectionActorsHome": "My team",
     "SectionActorsAdversary": "Opponent",
     "SectionPlaning": "Calendar",
-    "SectionPlace": "Location"
+    "SectionPlace": "Location",
+    "labels": {
+      "championship": "Championship",
+      "cup": "Cup",
+      "friendlyGame" : "Friendly game"
+
+    }
   },
   "eventErrors": {
     "Type": "Event's type is mandatory",
