--- a/src/app/components/i18n/agenda/fr.json
+++ b/src/app/components/i18n/agenda/fr.json
@@ -43,7 +43,13 @@
     "SectionActorsHome": "Mon équipe",
     "SectionActorsAdversary": "Adversaire",
     "SectionPlaning": "Planification",
-    "SectionPlace": "Localisation"
+    "SectionPlace": "Localisation",
+    "labels": {
+      "championship": "Championnat",
+      "cup": "Coupe",
+      "friendlyGame" : "Match amical"
+
+    }
   },
   "eventErrors": {
     "Type": "La type d'événement est obligatoire",
